updated tests & types to remove indy
