# src/routes/swagger.json
@@ -91,6 +91,216 @@
 				"type": "string",
 				"description": "Get the supported protocol versions based on the provided credential protocols."
 			},
+			"CredentialPreviewAttributeOptions": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"mimeType": {
+						"type": "string"
+					},
+					"value": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"name",
+					"value"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Pick_JwsGeneralFormat.Exclude_keyofJwsGeneralFormat.payload__": {
+				"properties": {
+					"header": {
+						"$ref": "#/components/schemas/Record_string.unknown_",
+						"description": "unprotected header"
+					},
+					"signature": {
+						"type": "string",
+						"description": "Base64url encoded signature"
+					},
+					"protected": {
+						"type": "string",
+						"description": "Base64url encoded protected header"
+					}
+				},
+				"required": [
+					"header",
+					"signature",
+					"protected"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_JwsGeneralFormat.payload_": {
+				"$ref": "#/components/schemas/Pick_JwsGeneralFormat.Exclude_keyofJwsGeneralFormat.payload__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"JwsDetachedFormat": {
+				"$ref": "#/components/schemas/Omit_JwsGeneralFormat.payload_"
+			},
+			"JwsFlattenedDetachedFormat": {
+				"properties": {
+					"signatures": {
+						"items": {
+							"$ref": "#/components/schemas/JwsDetachedFormat"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"signatures"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"AttachmentData": {
+				"description": "A JSON object that gives access to the actual content of the attachment",
+				"properties": {
+					"base64": {
+						"type": "string",
+						"description": "Base64-encoded data, when representing arbitrary content inline instead of via links. Optional."
+					},
+					"json": {
+						"$ref": "#/components/schemas/Record_string.unknown_",
+						"description": "Directly embedded JSON data, when representing content inline instead of via links, and when the content is natively conveyable as JSON. Optional."
+					},
+					"links": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array",
+						"description": "A list of zero or more locations at which the content may be fetched. Optional."
+					},
+					"jws": {
+						"anyOf": [
+							{
+								"$ref": "#/components/schemas/JwsDetachedFormat"
+							},
+							{
+								"$ref": "#/components/schemas/JwsFlattenedDetachedFormat"
+							}
+						],
+						"description": "A JSON Web Signature over the content of the attachment. Optional."
+					},
+					"sha256": {
+						"type": "string",
+						"description": "The hash of the content. Optional."
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Attachment": {
+				"description": "Represents DIDComm attachment\nhttps://github.com/hyperledger/aries-rfcs/blob/master/concepts/0017-attachments/README.md",
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"description": {
+						"type": "string",
+						"description": "An optional human-readable description of the content."
+					},
+					"filename": {
+						"type": "string",
+						"description": "A hint about the name that might be used if this attachment is persisted as a file. It is not required, and need not be unique. If this field is present and mime-type is not, the extension on the filename may be used to infer a MIME type."
+					},
+					"mimeType": {
+						"type": "string",
+						"description": "Describes the MIME type of the attached content. Optional but recommended."
+					},
+					"lastmodTime": {
+						"type": "string",
+						"format": "date-time",
+						"description": "A hint about when the content in this attachment was last modified."
+					},
+					"byteCount": {
+						"type": "number",
+						"format": "double",
+						"description": "Optional, and mostly relevant when content is included by reference instead of by value. Lets the receiver guess how expensive it will be, in time, bandwidth, and storage, to fully fetch the attachment."
+					},
+					"data": {
+						"$ref": "#/components/schemas/AttachmentData"
+					}
+				},
+				"required": [
+					"id",
+					"data"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"LinkedAttachment": {
+				"properties": {
+					"attributeName": {
+						"type": "string",
+						"description": "The name that will be used to generate the linked credential"
+					},
+					"attachment": {
+						"$ref": "#/components/schemas/Attachment",
+						"description": "The attachment that needs to be linked to the credential"
+					}
+				},
+				"required": [
+					"attributeName",
+					"attachment"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"AnonCredsProposeCredentialFormat": {
+				"description": "This defines the module payload for calling CredentialsApi.createProposal\nor CredentialsApi.negotiateOffer",
+				"properties": {
+					"schemaIssuerId": {
+						"type": "string"
+					},
+					"schemaId": {
+						"type": "string"
+					},
+					"schemaName": {
+						"type": "string"
+					},
+					"schemaVersion": {
+						"type": "string"
+					},
+					"credentialDefinitionId": {
+						"type": "string"
+					},
+					"issuerId": {
+						"type": "string"
+					},
+					"attributes": {
+						"items": {
+							"$ref": "#/components/schemas/CredentialPreviewAttributeOptions"
+						},
+						"type": "array"
+					},
+					"linkedAttachments": {
+						"items": {
+							"$ref": "#/components/schemas/LinkedAttachment"
+						},
+						"type": "array"
+					},
+					"schemaIssuerDid": {
+						"type": "string"
+					},
+					"issuerDid": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
+			},
+			"CredentialFormatPayload_CredentialFormats.createProposal_": {
+				"properties": {
+					"anoncreds": {
+						"$ref": "#/components/schemas/AnonCredsProposeCredentialFormat"
+					}
+				},
+				"type": "object",
+				"description": "Get the payload for a specific method from a list of CredentialFormat interfaces and a method"
+			},
 			"AutoAcceptCredential": {
 				"description": "Typing of the state for auto acceptance",
 				"enum": [
@@ -106,62 +316,7 @@
 						"$ref": "#/components/schemas/CredentialProtocolVersionType_CredentialProtocols_"
 					},
 					"credentialFormats": {
-						"properties": {
-							"indy": {
-								"properties": {
-									"attributes": {
-										"items": {
-											"properties": {
-												"value": {
-													"type": "string"
-												},
-												"name": {
-													"type": "string"
-												}
-											},
-											"required": [
-												"value",
-												"name"
-											],
-											"type": "object"
-										},
-										"type": "array"
-									},
-									"issuerDid": {
-										"type": "string"
-									},
-									"credentialDefinitionId": {
-										"type": "string"
-									},
-									"schemaVersion": {
-										"type": "string"
-									},
-									"schemaName": {
-										"type": "string"
-									},
-									"schemaId": {
-										"type": "string"
-									},
-									"schemaIssuerDid": {
-										"type": "string"
-									}
-								},
-								"required": [
-									"attributes",
-									"issuerDid",
-									"credentialDefinitionId",
-									"schemaVersion",
-									"schemaName",
-									"schemaId",
-									"schemaIssuerDid"
-								],
-								"type": "object"
-							}
-						},
-						"required": [
-							"indy"
-						],
-						"type": "object"
+						"$ref": "#/components/schemas/CredentialFormatPayload_CredentialFormats.createProposal_"
 					},
 					"autoAcceptCredential": {
 						"$ref": "#/components/schemas/AutoAcceptCredential"
@@ -181,65 +336,41 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"AnonCredsAcceptProposalFormat": {
+				"description": "This defines the module payload for calling CredentialsApi.acceptProposal",
+				"properties": {
+					"credentialDefinitionId": {
+						"type": "string"
+					},
+					"attributes": {
+						"items": {
+							"$ref": "#/components/schemas/CredentialPreviewAttributeOptions"
+						},
+						"type": "array"
+					},
+					"linkedAttachments": {
+						"items": {
+							"$ref": "#/components/schemas/LinkedAttachment"
+						},
+						"type": "array"
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
+			},
+			"CredentialFormatPayload_CredentialFormats.acceptProposal_": {
+				"properties": {
+					"anoncreds": {
+						"$ref": "#/components/schemas/AnonCredsAcceptProposalFormat"
+					}
+				},
+				"type": "object",
+				"description": "Get the payload for a specific method from a list of CredentialFormat interfaces and a method"
+			},
 			"AcceptCredentialProposalOptions": {
 				"properties": {
 					"credentialFormats": {
-						"properties": {
-							"indy": {
-								"properties": {
-									"attributes": {
-										"items": {
-											"properties": {
-												"value": {
-													"type": "string"
-												},
-												"name": {
-													"type": "string"
-												}
-											},
-											"required": [
-												"value",
-												"name"
-											],
-											"type": "object"
-										},
-										"type": "array"
-									},
-									"issuerDid": {
-										"type": "string"
-									},
-									"credentialDefinitionId": {
-										"type": "string"
-									},
-									"schemaVersion": {
-										"type": "string"
-									},
-									"schemaName": {
-										"type": "string"
-									},
-									"schemaId": {
-										"type": "string"
-									},
-									"schemaIssuerDid": {
-										"type": "string"
-									}
-								},
-								"required": [
-									"attributes",
-									"issuerDid",
-									"credentialDefinitionId",
-									"schemaVersion",
-									"schemaName",
-									"schemaId",
-									"schemaIssuerDid"
-								],
-								"type": "object"
-							}
-						},
-						"required": [
-							"indy"
-						],
-						"type": "object"
+						"$ref": "#/components/schemas/CredentialFormatPayload_CredentialFormats.acceptProposal_"
 					},
 					"autoAcceptCredential": {
 						"$ref": "#/components/schemas/AutoAcceptCredential"
@@ -248,8 +379,46 @@
 						"type": "string"
 					}
 				},
+				"required": [
+					"credentialFormats"
+				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"AnonCredsOfferCredentialFormat": {
+				"description": "This defines the module payload for calling CredentialsApi.offerCredential\nor CredentialsApi.negotiateProposal",
+				"properties": {
+					"credentialDefinitionId": {
+						"type": "string"
+					},
+					"attributes": {
+						"items": {
+							"$ref": "#/components/schemas/CredentialPreviewAttributeOptions"
+						},
+						"type": "array"
+					},
+					"linkedAttachments": {
+						"items": {
+							"$ref": "#/components/schemas/LinkedAttachment"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"credentialDefinitionId",
+					"attributes"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"CredentialFormatPayload_CredentialFormats.createOffer_": {
+				"properties": {
+					"anoncreds": {
+						"$ref": "#/components/schemas/AnonCredsOfferCredentialFormat"
+					}
+				},
+				"type": "object",
+				"description": "Get the payload for a specific method from a list of CredentialFormat interfaces and a method"
 			},
 			"CreateOfferOptions": {
 				"properties": {
@@ -257,42 +426,7 @@
 						"$ref": "#/components/schemas/CredentialProtocolVersionType_CredentialProtocols_"
 					},
 					"credentialFormats": {
-						"properties": {
-							"indy": {
-								"properties": {
-									"attributes": {
-										"items": {
-											"properties": {
-												"value": {
-													"type": "string"
-												},
-												"name": {
-													"type": "string"
-												}
-											},
-											"required": [
-												"value",
-												"name"
-											],
-											"type": "object"
-										},
-										"type": "array"
-									},
-									"credentialDefinitionId": {
-										"type": "string"
-									}
-								},
-								"required": [
-									"attributes",
-									"credentialDefinitionId"
-								],
-								"type": "object"
-							}
-						},
-						"required": [
-							"indy"
-						],
-						"type": "object"
+						"$ref": "#/components/schemas/CredentialFormatPayload_CredentialFormats.createOffer_"
 					},
 					"autoAcceptCredential": {
 						"$ref": "#/components/schemas/AutoAcceptCredential"
@@ -314,42 +448,7 @@
 						"$ref": "#/components/schemas/CredentialProtocolVersionType_CredentialProtocols_"
 					},
 					"credentialFormats": {
-						"properties": {
-							"indy": {
-								"properties": {
-									"attributes": {
-										"items": {
-											"properties": {
-												"value": {
-													"type": "string"
-												},
-												"name": {
-													"type": "string"
-												}
-											},
-											"required": [
-												"value",
-												"name"
-											],
-											"type": "object"
-										},
-										"type": "array"
-									},
-									"credentialDefinitionId": {
-										"type": "string"
-									}
-								},
-								"required": [
-									"attributes",
-									"credentialDefinitionId"
-								],
-								"type": "object"
-							}
-						},
-						"required": [
-							"indy"
-						],
-						"type": "object"
+						"$ref": "#/components/schemas/CredentialFormatPayload_CredentialFormats.createOffer_"
 					},
 					"autoAcceptCredential": {
 						"$ref": "#/components/schemas/AutoAcceptCredential"
@@ -369,8 +468,22 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"AnonCredsAcceptOfferFormat": {
+				"description": "This defines the module payload for calling CredentialsApi.acceptOffer. No options are available for this\nmethod, so it's an empty object",
+				"properties": {
+					"linkSecretId": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
+			},
 			"CredentialFormatPayload_CredentialFormats.acceptOffer_": {
-				"properties": {},
+				"properties": {
+					"anoncreds": {
+						"$ref": "#/components/schemas/AnonCredsAcceptOfferFormat"
+					}
+				},
 				"type": "object",
 				"description": "Get the payload for a specific method from a list of CredentialFormat interfaces and a method"
 			},
@@ -389,8 +502,25 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"AnonCredsAcceptRequestFormat": {
+				"$ref": "#/components/schemas/Record_string.never_",
+				"description": "This defines the module payload for calling CredentialsApi.acceptRequest. No options are available for this\nmethod, so it's an empty object"
+			},
+			"Record_string.never_": {
+				"properties": {
+					"anoncreds": {
+						"$ref": "#/components/schemas/AnonCredsAcceptRequestFormat"
+					}
+				},
+				"type": "object",
+				"description": "Construct a type with a set of properties K of type T"
+			},
 			"CredentialFormatPayload_CredentialFormats.acceptRequest_": {
-				"properties": {},
+				"properties": {
+					"anoncreds": {
+						"$ref": "#/components/schemas/AnonCredsAcceptRequestFormat"
+					}
+				},
 				"type": "object",
 				"description": "Get the payload for a specific method from a list of CredentialFormat interfaces and a method"
 			},
